--- a/Frontend/TutorialWebsite/courses/HTML.html
+++ b/Frontend/TutorialWebsite/courses/HTML.html
@@ -38,16 +38,16 @@
             <p>In this tutorial, you will get a lot of HTML examples, at least one example for each topic with explanation. You can also edit and run these examples. Learning HTML is fun, and it's very easy to learn.</p>
             <pre>
                 <code>
-                    <!DOCTYPE>  
-                    <html>  
-                    <head>  
-                    <title>Web page title</title>  
-                    </head>  
-                    <body>  
-                    <h1>Write Your First Heading</h1>  
-                    <p>Write Your First Paragraph.</p>  
-                    </body>  
-                    </html>  
+                    &lt;!DOCTYPE&gt;
+                    &lt;html&gt;
+                    &lt;head&gt;
+                    &lt;title&gt;Web page title&lt;/title&gt;
+                    &lt;/head&gt;
+                    &lt;body&gt;
+                    &lt;h1&gt;Write Your First Heading&lt;/h1&gt;
+                    &lt;p&gt;Write Your First Paragraph.&lt;/p&gt;
+                    &lt;/body&gt;
+                    &lt;/html&gt;  
                 </code>
             </pre>
         </section>
