added 10 july files

--- a/srikant/html css js/webpage/index.html
+++ b/srikant/html css js/webpage/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Courses</title>
-    <link rel="stylesheet" href="style.css" />
+    <link type="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
